[gd_scene load_steps=20 format=3 uid="uid://bmkjgidroq0ek"]

[ext_resource type="Theme" uid="uid://c30mdi5ed2iah" path="res://assets/fonts/monospace.tres" id="1_m8h0s"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_osepa"]
[ext_resource type="Script" uid="uid://cl8am1dq57b4" path="res://godot/entities/Entities.gd" id="2_krip0"]
[ext_resource type="Script" uid="uid://b1a8n01ih2ig0" path="res://godot/entities/EntityPlayer.gd" id="3_i14ea"]
[ext_resource type="PackedScene" uid="uid://qcrjjeqgf122" path="res://godot/scenes/RedHood.tscn" id="3_rlytp"]
[ext_resource type="Script" uid="uid://38r2fc733xaa" path="res://godot/commands/jump_command.gd" id="4_rylah"]
[ext_resource type="Script" uid="uid://ml1jfdu58bxm" path="res://godot/SimulateInput.gd" id="4_sghct"]
[ext_resource type="Script" uid="uid://di16n7fv27a8" path="res://godot/commands/arc_move_command.gd" id="6_uwghf"]
[ext_resource type="Resource" uid="uid://cn2lrsmx3i3wh" path="res://godot/resources/default.tres" id="8_7bxlx"]
[ext_resource type="Script" uid="uid://cc0gmnbmja00h" path="res://godot/commands/move_input_command.gd" id="8_sghct"]
[ext_resource type="Script" uid="uid://cvscfobqor8e6" path="res://godot/commands/fall_command.gd" id="10_ojwt1"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="16_15rco"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="17_5qqfe"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="17_vra06"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="18_vra06"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="19_5qqfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btrx0"]
size = Vector2(1152, 40)

[sub_resource type="GDScript" id="GDScript_0pclf"]
resource_name = "follow_ground"
script/source = "extends Camera2D

@export var ground: StaticBody2D


func _ready() -> void:
	_on_viewport_size_changed()
	get_viewport().connect(\"size_changed\", _on_viewport_size_changed)


func _on_viewport_size_changed() -> void:
	var screen_size := get_viewport_rect().size

	position.y = ground.position.y - screen_size.y * 0.4
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlytp"]
size = Vector2(18.5, 37)

[node name="Node2D" type="Node2D"]

[node name="Ground" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Ground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.49
offset_top = -20.0
offset_right = 576.49
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_btrx0")
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("ground")]
script = SubResource("GDScript_0pclf")
ground = NodePath("../Ground")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Editor" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="CodeEdit" type="TextEdit" parent="UI/Editor"]
custom_minimum_size = Vector2(300, 220)
layout_mode = 2
theme = ExtResource("1_m8h0s")
text = "hero.jump()
hero.walk_left(5)
hero.walk_right(5)"

[node name="Run" type="Button" parent="UI/Editor"]
layout_mode = 2
text = "Run"

[node name="StateChartDebugger" parent="UI" instance=ExtResource("1_osepa")]
offset_left = 419.0
offset_right = -2.0
offset_bottom = -6.0
theme = ExtResource("1_m8h0s")
initial_node_to_watch = NodePath("../../Entities/Player/StateChart")

[node name="Entities" type="Node" parent="."]
script = ExtResource("2_krip0")

[node name="Player" type="CharacterBody2D" parent="Entities" node_paths=PackedStringArray("code_edit", "input", "sprite", "fall_cmd", "move_cmd", "jump_cmd", "gsc")]
position = Vector2(0, -70)
scale = Vector2(2, 2)
script = ExtResource("3_i14ea")
code_edit = NodePath("../../UI/Editor/CodeEdit")
input = NodePath("SimulateInput")
sprite = NodePath("RedHood")
fall_cmd = NodePath("Commands/Fall")
move_cmd = NodePath("Commands/Move")
jump_cmd = NodePath("Commands/Jump")
stats = ExtResource("8_7bxlx")
gsc = NodePath("StateChart")
metadata/_edit_group_ = true

[node name="SimulateInput" type="Node" parent="Entities/Player" node_paths=PackedStringArray("fsm", "code_edit")]
script = ExtResource("4_sghct")
fsm = NodePath("")
code_edit = NodePath("../../../UI/Editor/CodeEdit")

[node name="RedHood" parent="Entities/Player" instance=ExtResource("3_rlytp")]
frame = 8
frame_progress = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/Player"]
position = Vector2(-2.25, 0.5)
shape = SubResource("RectangleShape2D_rlytp")

[node name="Commands" type="Node" parent="Entities/Player"]

[node name="Jump" type="Node" parent="Entities/Player/Commands"]
script = ExtResource("4_rylah")
metadata/_custom_type_script = "uid://38r2fc733xaa"

[node name="Fall" type="Node" parent="Entities/Player/Commands"]
script = ExtResource("10_ojwt1")
metadata/_custom_type_script = "uid://cvscfobqor8e6"

[node name="Move" type="Node" parent="Entities/Player/Commands" node_paths=PackedStringArray("sprite")]
script = ExtResource("8_sghct")
sprite = NodePath("../../RedHood")
key_name = &"run"
metadata/_custom_type_script = "uid://cc0gmnbmja00h"

[node name="ArcMove" type="Node" parent="Entities/Player/Commands"]
script = ExtResource("6_uwghf")
metadata/_custom_type_script = "uid://di16n7fv27a8"

[node name="StateChart" type="Node" parent="Entities/Player"]
script = ExtResource("16_15rco")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="ParallelState" type="Node" parent="Entities/Player/StateChart"]
script = ExtResource("17_vra06")

[node name="Locomotion" type="Node" parent="Entities/Player/StateChart/ParallelState"]
script = ExtResource("17_5qqfe")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToWalking" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Idle"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Walk")
event = &"to_walking"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion"]
script = ExtResource("18_vra06")

[node name="ToIdle" type="Node" parent="Entities/Player/StateChart/ParallelState/Locomotion/Walk"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="AirBorne" type="Node" parent="Entities/Player/StateChart/ParallelState"]
script = ExtResource("17_5qqfe")
initial_state = NodePath("Grounded")

[node name="Grounded" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToFalling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Grounded"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Falling")
event = &"to_falling"
delay_in_seconds = "0.0"

[node name="ToJump" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Grounded"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Jump")
event = &"to_jump"
delay_in_seconds = "0.0"

[node name="Falling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToGrounded" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Falling"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Grounded")
event = &"to_grounded"
delay_in_seconds = "0.0"

[node name="Jump" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne"]
script = ExtResource("18_vra06")

[node name="ToFalling" type="Node" parent="Entities/Player/StateChart/ParallelState/AirBorne/Jump"]
script = ExtResource("19_5qqfe")
to = NodePath("../../Falling")
event = &"to_falling"
delay_in_seconds = "0.0"

[connection signal="pressed" from="UI/Editor/Run" to="Entities/Player/SimulateInput" method="_on_run_pressed"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Idle" to="Entities/Player" method="_on_idle_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Idle" to="Entities/Player" method="_on_idle_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/Locomotion/Walk" to="Entities/Player" method="_on_walk_state_entered"]
[connection signal="state_exited" from="Entities/Player/StateChart/ParallelState/Locomotion/Walk" to="Entities/Player" method="_on_walk_state_exited"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/Locomotion/Walk" to="Entities/Player" method="_on_walk_state_physics_processing"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Grounded" to="Entities/Player" method="_on_grounded_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/AirBorne/Falling" to="Entities/Player" method="_on_falling_state_entered"]
[connection signal="state_exited" from="Entities/Player/StateChart/ParallelState/AirBorne/Falling" to="Entities/Player" method="_on_falling_state_exited"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Falling" to="Entities/Player" method="_on_falling_state_physics_processing"]
[connection signal="state_entered" from="Entities/Player/StateChart/ParallelState/AirBorne/Jump" to="Entities/Player" method="_on_jump_state_entered"]
[connection signal="state_physics_processing" from="Entities/Player/StateChart/ParallelState/AirBorne/Jump" to="Entities/Player" method="_on_jump_state_physics_processing"]
